<resources>
    <!-- Tab labels -->
    <string name="app_name">Diet App Project</string>
    <string name="bottom_nav_home_label">Home</string>
    <string name="bottom_nav_meal_label">Today\'s Meals</string>
    <string name="bottom_nav_fooditem_label">Food Items</string>
    <string name="bottom_nav_stats_label">Statistics</string>
    <string name="bottom_nav_settings_label">Settings</string>
    <string name="meal_nav_today_label">Today</string>
    <string name="meal_nav_history_label">History</string>

    <!-- Register & Login -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="prompt_email">Enter Email Address</string>
    <string name="prompt_password">Enter Password</string>
    <string name="prompt_password_repeat">Repeat Password</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="signup">Register</string>
    <string name="name">Name</string>

    <!-- Settings -->
    <string name="settings_notifications_label">Notifications</string>
    <string name="settings_breakfast_label">Breakfast</string>
    <string name="settings_lunch_label">Lunch</string>
    <string name="settings_dinner_label">Dinner</string>
    <string name="save">Save</string>
    <string name="calorie_goal">Calorie Goal</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="protein_goal">Protein Goal</string>
    <string name="carbs_goal">Carbs Goal</string>
    <string name="fat_goal">Fat Goal</string>


    <!-- List of Meal Categories for Add Meal -->
    <string-array name="meal_category">
        <item>Breakfast</item>
        <item>Snack</item>
        <item>Dinner</item>
        <item>Lunch</item>
        <item>Fika</item>
    </string-array>
</resources>