<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/settings_notifications_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_settings_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/settings_breakfast_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBaseline_toBaselineOf="@+id/switch_settings_breakfast"
            app:layout_constraintEnd_toStartOf="@+id/switch_settings_breakfast"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_settings_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/timepicker_settings_breakfast"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toEndOf="@+id/textview_settings_breakfast"
            app:layout_constraintTop_toTopOf="@+id/timepicker_settings_breakfast" />

        <TimePicker
            android:id="@+id/timepicker_settings_breakfast"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:timePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textview_settings_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/settings_lunch_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBaseline_toBaselineOf="@+id/switch_settings_lunch"
            app:layout_constraintEnd_toStartOf="@+id/switch_settings_lunch"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_settings_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/timepicker_settings_lunch"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toEndOf="@+id/textview_settings_lunch"
            app:layout_constraintTop_toTopOf="@+id/timepicker_settings_lunch" />

        <TimePicker
            android:id="@+id/timepicker_settings_lunch"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:timePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/timepicker_settings_breakfast" />

        <TextView
            android:id="@+id/textview_settings_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/settings_dinner_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBaseline_toBaselineOf="@+id/switch_settings_dinner"
            app:layout_constraintEnd_toStartOf="@+id/switch_settings_dinner"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_settings_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/timepicker_settings_dinner"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toEndOf="@+id/textview_settings_dinner"
            app:layout_constraintTop_toTopOf="@+id/timepicker_settings_dinner" />

        <TimePicker
            android:id="@+id/timepicker_settings_dinner"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:timePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/timepicker_settings_lunch" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>